[project]
name = "drawinline2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "interception-python",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.0",
    "pywin32>=311",
    "scikit-image>=0.26.0",
]

[tool.uv.workspace]
members = [
    "third_party/pyinterception",
]

[tool.uv.sources]
interception-python = { workspace = true, editable = true }
